@@ -21,6 +21,8 @@
 * Fixed a bug when accessing global vars from a sub-template
 * Fixed a couple bugs in the {dynamic} plugin with regard to using plugins
   within a dynamic block
+* Fixed a {load_templates} bug, plugins used in external templates were not
+  loaded correctly
 * Cached templates now check the source template for modification before 
   outputting the cached version
 * Removed a couple of @-operator calls to file_get_contents
